style.css
body {
    margin: 0;
    /* background: linear-gradient(to right, lightgrey, grey); */
}
.home {
    background-image: url("assets/pencilShavings.jpg");
    /* background-repeat: no-repeat;
    background-position: center center; */
    /* background-size: 100%; */
    color: #cccccc;
}

header {
  text-align: center;
  height:25vh;
  display:flex;
  align-items:center;
  justify-content: center;
}
.container {
    padding-top: 20px;
    display: grid;
    max-width: 70%;
}
.logo1 {
    font-family: 'Tangerine';
    font-weight: 100;
    font-size: 56px;
    text-shadow:6px 6px 10px #aaaaaa;
    transform: rotate(-10deg);
    transition-delay: 3s;
    transition-duration : 1s;
    transition-property: all;
}
.content {
    /* background-color: rgba(255, 255, 255, .8); */
    max-width: 900px;
    margin: 70px auto;
    padding: 40px;
    text-align: justify;
    color: black;
    transform: scale(0.97);
    transition: transform 0.5s;

}
.fixed-nav .content {
    transform: scale(1);
    
}
/* nav bar */
nav {
    background: rgba(255,150, 1, 0.9);
    top:0;
    width: 100%;
    transition:all 0.5s;
    position: relative;
    z-index: 1;
  }
.fixed-nav nav {
    position: fixed;
    box-shadow: 0 5px rgba(0, 0, 0, 0.1);
    
  }
nav ul {
    margin: 0;
    padding:0;
    list-style: none;
    display:flex;
  }
nav li {
    flex:1;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
  }
li.logo {
    max-width:0;
    overflow: hidden;
    background: grey;
    transition: all .5s;
    font-weight: 600;
    font-size: 30px;
    color: #000000;
    font-family: 'Amatic SC';
  }
.fixed-nav li.logo {
    max-width: 500px;
  }
nav a {
    text-decoration: none;
    padding:10px;
    display: inline-block;
    color: white;
    transition:all 0.2s;
    text-transform: uppercase;
  }

nav a:hover {
    text-decoration: none;
    color: darkmagenta;
}

img {
    width: 150px;
    margin: 20px;
    transition: all 200ms ease;
}
img:hover {
    -webkit-transition: all 300ms ease-in;
    -webkit-transform: scale(1.3);
    -ms-transition: all 2300ms ease-in;
    -ms-transform: scale(1.3);   
    -moz-transition: all 300ms ease-in;
    -moz-transform: scale(1.3);
    transition: all 1000ms ease;
    transform: scale(1.2);
}
.btn {
    width: 50%;
    height: 75px;
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 15px;
    margin-bottom: 200px;
    /* margin-bottom: 100px; */
    border: 1px solid #aaaaaa;
    background: #ffffff;
    border-radius: 15px;
    color: #000000;
    font-size: 24px;
    outline: none;
    transition: .5s;
    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
                inset -2px -2px 3px rgba(0, 0, 0, .6);
  }
  .btn:hover {
    background: rgba(255,150, 0);
    color: #ffffff;
    border: none;
    transform: scale(1.1);
    transition: .5s;
  }
  .btn:active {
    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
    inset 2px 2px 3px rgba(0, 0, 0, .6);
  }
.form {
      width: 50%;
      margin: auto;
      margin-bottom: 100px;
      padding:  20px 30px;
      border: 2px solid teal;
      text-align: center;
      background-color: white;
  }
.contact {
    width: 50%;
    margin: 50px auto;
    text-align: center;
}
textarea {
    width: 75%;
    margin-bottom: 120px;
    padding-bottom: 30px;
    margin: auto;
    font-family: 'Amatic SC';
    font-size: 24px;
}
footer {
    padding-top: 100px;
    margin-top: 500px;
    text-align: center;
}

